<resources>
    <string name="app_name">Dealership Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_account">Create an Account</string>
    <string name="full_name">Full Name</string>
    <string name="present_address">Present Address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="policy">By continuing you accept our Privacy Policy</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="phone_number1">Phone Number</string>
    <string name="image_uri">Image Uri</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="upload_image">Upload Image</string>
    <string name="don_t_have_an_account">Don\'t have account?</string>
    <string name="login_to_dmc">Login to DMC</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="verification">Verification</string>
    <string name="you_will_get_an_otp_via_sms">You will get an OTP via SMS</string>
    <string name="continue1">Continue</string>
    <string name="did_t_receive_the_verification_otp">Did\'t receive the verification OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="forget_password">Forget Password</string>
    <string name="logout">Logout</string>
    <string name="select_a_customer">Select a Customer</string>
    <string name="filter">Filter</string>
    <string name="national_id_card">National ID Card</string>
    <string name="selected_store">Selected Store</string>
    <string name="md_khalid_hasan_jibon">MD Khalid Hasan Jibon</string>
    <string name="address_shop_store_details_fragment">shop no-27/28,block-d,level-06 shop no-27/28,block-d,level-06 shop no-27/28,block-d,level-06</string>
    <string name="current_orders">Current Orders:</string>
    <string name="complete_orders">Complete Orders:</string>
    <string name="m_s_khalid_store">M/S Khalid Store</string>
    <string name="email_or_phone">Email or Phone</string>
</resources>