<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_phone_verification"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/bg_verification_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnClose" />

    <ImageView
        android:id="@+id/iv_phone_verification"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/phone_number_verification"
        app:layout_constraintBottom_toBottomOf="@id/view_phone_verification"
        app:layout_constraintEnd_toEndOf="@id/view_phone_verification"
        app:layout_constraintStart_toStartOf="@id/view_phone_verification"
        app:layout_constraintTop_toTopOf="@id/view_phone_verification" />


    <TextView
        android:id="@+id/tv_verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/verification"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_phone_verification" />

    <TextView
        android:id="@+id/tv_verification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_will_get_an_otp_via_sms"
        android:textColor="#A9A9A9"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_verification" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#A9A9A9"
        app:boxStrokeColor="@color/primary"
        android:layout_marginHorizontal="@dimen/_16ssp"
        android:layout_marginTop="@dimen/_32sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_verification_title"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="numberPassword"
            android:textSize="@dimen/_16sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/btn_create_account"
        android:paddingHorizontal="@dimen/_8sdp"
        android:text="@string/continue1"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_otp" />

    <TextView
        android:id="@+id/tv_not_OTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/did_t_receive_the_verification_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_continue" />


    <TextView
        android:id="@+id/tv_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/resend_otp"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tv_not_OTP"
        app:layout_constraintStart_toEndOf="@id/tv_not_OTP"
        app:layout_constraintTop_toBottomOf="@id/btn_continue" />


</androidx.constraintlayout.widget.ConstraintLayout>