<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.auth.registration.RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_16sdp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_120sdp"
                android:src="@drawable/logo1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/bebas_neue"
                android:gravity="center"
                android:text="@string/create_an_account"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/primary"
                android:textSize="@dimen/_24sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_user_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:hint="@string/name"
                android:textColorHint="#A9A9A9"
                app:boxStrokeWidth="2dp"
                app:counterTextAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:endIconMode="clear_text"
                app:helperTextTextColor="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_user_name_24"
                    android:drawablePadding="4dp"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/phone_number1"
                android:textColorHint="#A9A9A9"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                app:counterTextAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:endIconMode="clear_text"
                app:helperTextTextColor="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_user_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_phone_24"
                    android:drawablePadding="4dp"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="#A9A9A9"
                app:boxStrokeWidth="2dp"
                app:counterTextAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:endIconMode="clear_text"
                app:helperTextTextColor="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_phone_number_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_email_24"
                    android:drawablePadding="4dp"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_nid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/national_id_card"
                android:textColorHint="#A9A9A9"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterTextAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:endIconMode="clear_text"
                app:helperTextTextColor="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_nid_24"
                    android:drawablePadding="4dp"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="#A9A9A9"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterTextAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_nid_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_password_24"
                    android:drawablePadding="4dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_confirm_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:textColorHint="#A9A9A9"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterTextAppearance="@style/TextAppearance.Material3.TitleSmall"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="#FF0000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_confirm_password_24"
                    android:drawablePadding="4dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/ic_profile_image_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_confirm_password_layout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_upload_image"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:background="@drawable/btn_upload_image"
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/upload_image"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_user" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/btn_create_account"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_upload_image" />

            <TextView
                android:id="@+id/tv_already_have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/already_have_an_account"
                android:textColor="#FF304F"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_create_account" />

            <Button
                android:id="@+id/btn_login"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/primary"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_already_have_account"
                app:strokeColor="#10254A"
                app:strokeWidth="@dimen/_2sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>