<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.storeOwnerDetails.StoreOwnerDetailsFragment">

    <TextView
        android:id="@+id/tv_select_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/selected_store"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_selected_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginBottom="8dp"
        android:background="@color/recyclerView"
        android:backgroundTint="@color/recyclerView"
        android:padding="@dimen/_4sdp"
        app:cardElevation="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_customer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_4sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_store_owner"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_profile_image_24"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:ellipsize="end"
                android:maxWidth="@dimen/_168sdp"
                android:maxLines="1"
                android:text="@string/m_s_khalid_store"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_store_owner"
                app:layout_constraintTop_toTopOf="@id/iv_store_owner" />

            <TextView
                android:id="@+id/tv_owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxWidth="@dimen/_168sdp"
                android:maxLines="1"
                android:text="@string/md_khalid_hasan_jibon"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_store_name"
                app:layout_constraintTop_toBottomOf="@id/tv_store_name" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:ellipsize="end"
                android:maxWidth="@dimen/_168sdp"
                android:maxLines="2"
                android:text="@string/address_shop_store_details_fragment"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/tv_owner_name"
                app:layout_constraintTop_toBottomOf="@id/tv_owner_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_current_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/current_orders"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_selected_store" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_current_order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/tv_complete_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_current_order"
        tools:listitem="@layout/item_layout_pending_and_complete_order" />


    <TextView
        android:id="@+id/tv_complete_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/complete_orders"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_current_order" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_complete_order"
        tools:listitem="@layout/item_layout_pending_and_complete_order" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_create_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:backgroundTint="@color/secondary"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>